WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294650
REGRESSION (
296041@main
): Video elements fail to enter standby mode on iOS
https://bugs.webkit.org/show_bug.cgi?id=294650
Summary
REGRESSION (296041@main): Video elements fail to enter standby mode on iOS
Andy Estes
Reported
2025-06-17 21:00:52 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2025-06-17 21:00:53 PDT
<
rdar://problem/153578542
>
Andy Estes
Comment 2
2025-06-17 21:07:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46882
EWS
Comment 3
2025-06-18 11:24:58 PDT
Committed
296390@main
(749e2237fe35): <
https://commits.webkit.org/296390@main
> Reviewed commits have been landed. Closing PR #46882 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug