REGRESSION (296041@main): Video elements fail to enter standby mode on iOS https://bugs.webkit.org/show_bug.cgi?id=294650 rdar://153578542

Reviewed by Eric Carlson.

296041@main fixed a bug where VideoPresentationManager::enterVideoFullscreenForVideoElement would
incorrectly return early when returning from PiP to standard fullscreen by ensuring that it only
returns early when the new VideoFullscreenMode is the same as the current VideoFullscreenMode.
However, when entering standby mode for a video element, enterVideoFullscreenForVideoElement is
called with VideoFullscreenModeNone and the standby boolean set to true. Since
VideoFullscreenModeNone matches the current VideoFullscreenMode, this call would incorrectly return
early.

Resolved this by allowing VideoPresentationManager::enterVideoFullscreenForVideoElement to proceed
when the standby bit is set.

Added an API test.

* Source/WebKit/UIProcess/API/APIUIClient.h:
(API::UIClient::didEnterStandby):
(API::UIClient::didExitStandby):
* Source/WebKit/UIProcess/API/Cocoa/WKUIDelegatePrivate.h:
* Source/WebKit/UIProcess/Cocoa/UIDelegate.h:
* Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::setDelegate):
(WebKit::UIDelegate::UIClient::didEnterStandby):
(WebKit::UIDelegate::UIClient::didExitStandby):
* Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm:
(WebKit::VideoPresentationManagerProxy::didExitFullscreen):
(WebKit::VideoPresentationManagerProxy::didEnterFullscreen):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didEnterStandby):
(WebKit::WebPageProxy::didExitStandby):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/cocoa/VideoPresentationManager.mm:
(WebKit::VideoPresentationManager::canEnterVideoFullscreen const):
(WebKit::VideoPresentationManager::enterVideoFullscreenForVideoElement):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UI/VideoPresentationMode.mm:
(-[VideoPresentationModeUIDelegate waitForDidEnterFullscreen]):
(-[VideoPresentationModeUIDelegate waitForDidExitFullscreen]):
(-[VideoPresentationModeUIDelegate waitForDidEnterStandby]):
(-[VideoPresentationModeUIDelegate waitForDidExitStandby]):
(-[VideoPresentationModeUIDelegate _webViewDidEnterFullscreen:]):
(-[VideoPresentationModeUIDelegate _webViewDidExitFullscreen:]):
(-[VideoPresentationModeUIDelegate _webViewDidEnterStandbyForTesting:]):
(-[VideoPresentationModeUIDelegate _webViewDidExitStandbyForTesting:]):
(TEST(VideoPresentationMode, Fullscreen)):
(TEST(VideoPresentationMode, Inline)):
(TEST(VideoPresentationMode, Standby)):
(TEST(VideoPresentationMode, PictureInPicture)):

Canonical link: https://commits.webkit.org/296390@main